# wav2vec2fasr-repo

./: .gitignore  README.md  audio_processor.py  backup_toks.tsv  ccs notes.txt  chunking_test.py  env.yml  eval.py  eval.sh  evaluate.py  fine_tuner.py  forcedalignment.py  full_finetune.py  intonation_chunk.py  new_data_process.py  new_finetune.py  new_vocab_setup.py  orthography.py  prep.sh  prinmitext.py  pumi_base.tsv  pumi_cd.tsv  pumi_ct.tsv  pumi_tok.tsv  pyproject.toml  rvad_faster.py  segment.py  td21-22_020_realigned.eaf  testing.py  transcribe.py
.github/workflows/: build_and_test.yml
src/: evaluate.py  forcedalignment.py  full_finetune.py  new_data_process.py  orthography.py  segment.py  transcribe.py
src/application/: transcribe.py
src/cluster/: submit.sh
src/obsolete/: test.py  text_processor.py
src/tokenizations/: pumi_cd.tsv
src/training/: audio_processor.py  evaluate.py  new_data_process.py  new_finetune.py  new_vocab_setup.py
src/wav2vec2fasr/: audio_processor.py  evaluate.py  forcedalignment.py  full_finetune.py  mfa_tools.py  new_data_process.py  new_finetune.py  new_vocab_setup.py  orthography.py  prinmitext.py  rvad_faster.py  segment.py  transcribe.py
src/wav2vec2fasr/resources/: config.json  default_tokenization.tsv  eng_phone_inv.txt  fsd_eval_sets.json  old_eval_sets.json  phoneMapping1.txt  phoneMapping2.txt  pumi_base.tsv  (+10 more)
tests/: test_import.py  testing.py
tests/test_files/: td21-22_020.eaf  td21-22_020_preds.eaf  td21-22_020_preds_nt.eaf  td21-22_020_preds_pm.eaf  td21-22_020_preds_pm_ac.eaf  td21-22_020_preds_pm_ac_wm.eaf
(+13 files in other folders)
