[tool.poetry]
name = "wav2vec2fasr"
version = "0.1.0"
description = "Set of tools for fine-tuning wav2vec2 models for transcription and forced alignment, first developed specifically for application in language documentation of Northern Prinmi"
authors = ["ConnorBechler <cbechler2@gmail.com>"]
readme = "README.md"
packages = [{include = "wav2vec2fasr", from = "src"}]
[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jiwer = "^3.0.3"
levenshtein = "^0.24.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
datasets = "^2.16.1"
transformers = "^4.37.2"
accelerate = "^0.26.1"
pympi-ling = "^1.70.2"
pyctcdecode = "^0.5.0"
torch = ">=1.11.0"
torchvision = ">=0.12.0"
torchaudio = ">=0.11.0"
pydub = "^0.25.1"
praat-parselmouth = "^0.4.3"
speechbrain = "^0.5.16"
click = "^8.1.7"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip"}
rvadfast = "^0.0.3"
polars = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings =[
    "ignore::UserWarning"
]
pythonpath = "src"
testpaths = "tests"